--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,26 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+@import "tailwindcss";
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@theme {
+    /* Font Family */
+    --font-montserrat: "Montserrat", serif;
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
+    /* Box Shadow */
+    --box-shadow-glow: 0 0 15px rgba(0, 0, 0, 0.3);
+    --box-shadow-right-edge: 10px 0px 10px -5px rgba(0, 0, 0, 0.3);
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
+    /* Colors */
+    --color-primary: rgb(28, 100, 242);
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
+    /* Banner Colors */
+    --color-banner-warning: #FDC200;
+    --color-banner-error: #FF2C2C;
+    --color-banner-success: #21AD61;
+    --color-banner-info: #723DA6;
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+    /* Background Images (Custom Gradients) */
+    --color-dark-slate: linear-gradient(to right, #111827, #1f2937);
+    --color-purple-red: linear-gradient(to right, #7e22ce, #ef4444);
+    --color-light-cream: linear-gradient(135deg, #f5f5f5, #eae7dc);
 }
